cpdfetex/tex_io.h

/* module 36 */

/* Different systems have different ways to get started. But regardless of
 * what conventions are adopted, the routine that initializes the terminal
 * should satisfy the following specifications:
 * 
 * \yskip\textindent{1)}It should open file |term_in| for input from the
 * terminal. (The file |term_out| will already be open for output to the
 * terminal.)
 * 
 * \textindent{2)}If the user has given a command line, this line should be
 * considered the first line of terminal input. Otherwise the
 * user should be prompted with `\.{**}', and the first line of input
 * should be whatever is typed in response.
 * 
 * \textindent{3)}The first line of input, which might or might not be a
 * command line, should appear in locations |first| to |last-1| of the
 * |buffer| array.
 * 
 * \textindent{4)}The global variable |loc| should be set so that the
 * character to be read next by \TeX\ is in |buffer[loc]|. This
 * character should not be blank, and we should have |loc<last|.
 * 
 * \yskip\noindent(It may be necessary to prompt the user several times
 * before a non-blank line comes in. The prompt is `\.{**}' instead of the
 * later `\.*' because the meaning is slightly different: `\.{\\input}' need
 * not be typed immediately after~`\.{**}'.)
 */
#define loc  cur_input . loc_field
EXTERN text_char *name_of_file;
EXTERN unsigned int name_length;
EXTERN ASCII_code *buffer;
EXTERN unsigned int first;
EXTERN unsigned int last;
EXTERN boolean      input_line (FILE *f);
EXTERN str_number   getjobname(void);
EXTERN str_number   make_full_name_string(void);
EXTERN void begin_file_reading (void);
EXTERN str_number *source_filename_stack;
EXTERN str_number *full_source_filename_stack;
EXTERN str_number cur_name; /* name of file just scanned */
 
EXTERN str_number cur_area; /* file area just scanned, or \.{""} */
 
EXTERN str_number cur_ext; /* file extension just scanned, or \.{""} */
EXTERN integer format_default_length;
EXTERN char *TEX_format_default;
EXTERN boolean name_in_progress; /* is a file name being scanned? */
 
EXTERN str_number jobname; /* principal file name */
 
EXTERN boolean log_opened; /* has the transcript file been opened? */
EXTERN void begin_name (void);
EXTERN boolean more_name (ASCII_code c);
EXTERN void end_name (void);
EXTERN void pack_file_name (str_number n, str_number a, str_number e);
EXTERN str_number make_name_string (void);
 
EXTERN str_number output_file_name; /* full name of the output file */
EXTERN void open_log_file (void);
EXTERN void close_files_and_terminate (void);
EXTERN void scan_file_name (void);
/* module 1812 */
EXTERN boolean stop_at_space; /* whether |more_name| returns false for space */