cpdfetex/control.h

boolean its_all_over (void);
void handle_main_loop(void);
void handle_easy_cases(void);
void append_normal_space(void);
extern boolean cancel_boundary;