cpdfetex/main.h

EXTERN int          main (int ac,  string *av);
void allocate_memory_for_arrays(void);
void initialize(void);
void init_prim(int noninit);
void init_etex_prim(void);
extern int argc;
extern char **argv;
extern char *user_progname;
extern long mem_top;
extern long mem_min;
extern long mem_max;